tests/error/struct_errors/type_missing1.err
Error: Unexpected statement (at $FILE:9:4)
  | 
7 | @guppy.struct
8 | class MyStruct:
9 |     x
  |     ^ Unexpected statement in struct definition

Help: struct fields must be of the form `name: Type` or `@guppy` annotated
methods

Guppy compilation failed due to 1 previous error
